Archive2/8f/5c693660bde3cb/output
main.cpp:17:21: error: no matching member function for call to 'foo'
    std::cout << bq.foo<int>() << " " << bq.foo<double>() << "\n";
                 ~~~^~~~~~~~
main.cpp:6:10: note: candidate template ignored: couldn't infer template argument ''
    auto foo() {
         ^
main.cpp:10:10: note: candidate template ignored: couldn't infer template argument ''
    auto foo() {
         ^
main.cpp:17:45: error: no matching member function for call to 'foo'
    std::cout << bq.foo<int>() << " " << bq.foo<double>() << "\n";
                                         ~~~^~~~~~~~~~~
main.cpp:6:10: note: candidate template ignored: couldn't infer template argument ''
    auto foo() {
         ^
main.cpp:10:10: note: candidate template ignored: couldn't infer template argument ''
    auto foo() {
         ^
2 errors generated.
